# OpenShell

./: CONTRIBUTING.md  README.md
.agents/skills/nemoclaw-cli/: SKILL.md  cli-reference.md
.github/workflows/: e2e-test.yml  e2e.yml  publish.yml
architecture/: containers.md
architecture/plans/: cli-gateway-mtls.md  cluster-bootstrap.md
crates/navigator-bootstrap/: Cargo.toml
crates/navigator-bootstrap/src/: build.rs  docker.rs  lib.rs
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: lib.rs  main.rs  run.rs  ssh.rs  tls.rs
crates/navigator-cli/tests/: mtls_integration.rs
crates/navigator-tui/src/: lib.rs
deploy/docker/: Dockerfile.cluster  cluster-healthcheck.sh
deploy/helm/navigator/: values.yaml
deploy/helm/navigator/templates/: gateway-client-traffic-policy.yaml  gateway-pki-job.yaml  gateway-pki-role.yaml  gateway-pki-rolebinding.yaml  gateway-pki-serviceaccount.yaml  gateway.yaml  gatewayclass.yaml  grpcroute.yaml
deploy/kube/manifests/: navigator-helmchart.yaml
e2e/bash/: test_sandbox_custom_image.sh
examples/bring-your-own-container/: README.md
examples/private-ip-routing/: README.md
tasks/scripts/: cluster.sh
